applications/dev-environment/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-environment
  labels:
    app.kubernetes.io/name: dev-environment
    app.kubernetes.io/part-of: infrastructure
