applications/dev-environment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-environment
  namespace: dev-environment
  labels:
    app.kubernetes.io/name: dev-environment
    app.kubernetes.io/component: development
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: node
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: python
  - port: 22
    targetPort: 22
    protocol: TCP
    name: ssh
    nodePort: 30222
  selector:
    app.kubernetes.io/name: dev-environment
    app.kubernetes.io/component: development
